feat: enhance configuration and improve message producer initialization with conditional properties